Additional revisions for coversheet - print gray boxes for qty's if 0 - fixed NaN bug

--- a/print/css/e_coversheet.css
+++ b/print/css/e_coversheet.css
@@ -143,11 +143,37 @@ th, .header {
     border-width: 0 0 1px 0 !important;
 }
 
-input[type=checkbox] {
-    padding: 0;
+input[type="checkbox"] {
+    visibility: hidden;
     margin: 0;
-    height: 12px;
-    width: 12px;
+    padding: 0;
+}
+
+label {
+    cursor: pointer;
+}
+
+input[type="checkbox"] + label:before {
+    border: 1px solid #000;
+    content: "\00a0";
+    display: inline-block;
+    font: 10px/1em sans-serif;
+    height: 10px;
+    width: 10px;
+    margin: 0 .25em 0 -1.5em;
+    padding: 0;
+    vertical-align: text-bottom;
+    background-color: #FFF;
+}
+
+input[type="checkbox"]:checked + label:before {
+    color: #000;
+    content: "\2713";
+    text-align: center;
+}
+
+input[type="checkbox"]:checked + label:after {
+    font-weight: bold;
 }
 
 .border_double_bottom {
@@ -156,9 +182,11 @@ input[type=checkbox] {
 }
 
 #sample_confirmation {
-    margin-left: 10%;
+    margin: 9.3% 0 0 10%;
     width: 35%;
     float: left;
+    background-color: rgb(216, 216, 216);
+    border: 1px solid #000;
 }
 
 #charge_summary_std, #terms_acceptance, #charge_summary_arh {
@@ -167,7 +195,7 @@ input[type=checkbox] {
 }
 
 #terms_acceptance {
-    clear: both;
+    margin-top: 8px;
 }
 
 .em_box {
@@ -185,6 +213,8 @@ input[type=checkbox] {
     font-weight: bold;
     text-align: center;
     padding-top: 5px;
+    font-size: 1.1em;
+    clear: both;
 }
 
 .gray_bg {
@@ -241,5 +271,10 @@ input[type=text], textarea {
 
     .highlight_input {
         background-color: transparent;
+    }
+
+    .print_gray {
+        background-color: rgb(216,216,216);
+        color: transparent;
     }
 }
